--- a/30_sources/ZGEN_Documents/UD_Zupfnoter-Handbuch-de_review.latex
+++ b/30_sources/ZGEN_Documents/UD_Zupfnoter-Handbuch-de_review.latex
@@ -205,7 +205,7 @@
 \hyphenation{Zupf-noter}
 \hyphenation{Fen-ster}
 
-Version 1.12-1-gb0b70990
+Version 1.12-5-gddbadeb8
 
 \begin{verbatim}
 © 2019 https://www.zupfnoter.de
