--- a/30_sources/ZGEN_Documents/UD_Zupfnoter-Handbuch-de_review.latex
+++ b/30_sources/ZGEN_Documents/UD_Zupfnoter-Handbuch-de_review.latex
@@ -205,7 +205,7 @@
 \hyphenation{Zupf-noter}
 \hyphenation{Fen-ster}
 
-Version 1.12-22-g8a56312e
+Version 1.12-23-gbbe89577
 
 \begin{verbatim}
 © 2019 https://www.zupfnoter.de
