--- a/30_sources/ZGEN_Documents/UD_Zupfnoter-Handbuch-de_review.latex
+++ b/30_sources/ZGEN_Documents/UD_Zupfnoter-Handbuch-de_review.latex
@@ -205,7 +205,7 @@
 \hyphenation{Zupf-noter}
 \hyphenation{Fen-ster}
 
-Version 1.12-23-gbbe89577
+Version V\_1.12.1-7-ga8bfc429
 
 \begin{verbatim}
 © 2019 https://www.zupfnoter.de
