see #289 updated documentation

--- a/30_sources/SRC_Zupfnoter/src/localization/zupfnoter_de-de.json
+++ b/30_sources/SRC_Zupfnoter/src/localization/zupfnoter_de-de.json
@@ -48,6 +48,7 @@
     "afterColon1": "afterColon1",
     "afterColonN": "afterColonN",
     "afterComma": "afterComma",
+    "Akkordzither": "Akkordzither",
     "align": "Ausrichtung",
     "aligned": "aligned",
     "all parameters": "Alle Parameter",
@@ -93,6 +94,10 @@
     "CAUTION: your abc-code is vulnerable !!! removed beginjs / endjs": "ACHTUNG:: dein ABC-Code enthält ggf. Schadcode. beginjs / endjs entfernt",
     "choose drobox path": "Speicherort auswählen",
     "Choose extract": "Auszug wählen",
+    "chord": "Akkordsymbol",
+    "chords": "Akkordsymbole",
+    "cntextleft": "Text rechte Zählmarke",
+    "cntextright": "Text linke Zählmarke",
     "color": "Farbeinstellung",
     "color_default": "Sonstiges",
     "color_off": "Var. End sw",
@@ -111,6 +116,7 @@
     "countnote right": "Zählmarke rechts",
     "countnote": "Zählmarke",
     "countnotes": "Zählmarken",
+    "countnotes_with_lyrics": "Zählmarken mit Text",
     "cp1": "cp1",
     "cp2": "cp2",
     "Create new sheet": "Neues Blatt erstellen",
@@ -137,6 +143,7 @@
     "Demo": "Demonstration",
     "direction to shift the note": "Richtung, in welche die Note geschoben werden soll",
     "direction": "Richtung",
+    "Display pdfs": "Pdf anzeigen",
     "Distance for followup-line from first note after variation": "Abstand der Folgelinie von der ersten Note nach dem varianten Abschnitt",
     "Distance for in-line from last note before variation": "Abstand der Eingangslinie von der letzten Note vor dem varianten Abschnitt",
     "Distance for out-line from firat note after variation": "Abstand der Ausgangslinie von der ersten Note nach dem varianten Abschnitt",
@@ -177,7 +184,7 @@
     "editor and harpnotes\napplicaple to tweak the notes for harp": "Zeige ABC und Harfennoten\ngeeignet zur Feinkorektur\nim Unterlegnotenblatt",
     "editor and notes\napplicable to enter notes": "Zeige ABC und Notendarstellung\ngeeignet zur Eingabe von Noten",
     "edittemplate": "Vorlage bearbeiten",
-    "Effective value": "aktuell wirksamer Wert",
+    "Effective value": "wirksamer Wert",
     "ELLIPSE_SIZE": "Notengröße",
     "Empty voice": "Stimme ist leer",
     "end-of-translagion": "end-of-translation",
@@ -351,6 +358,7 @@
     "packer_regular": "Packer normal",
     "page annotation": "Seitenbeschriftung",
     "partname": "Partname",
+    "pdf": "Pdf-Vorschau",
     "Perspective": "Ansicht",
     "PITCH_OFFSET": "PitchOffset",
     "play fast": "Wiedergabe schnell",
@@ -396,9 +404,15 @@
     "repeatsigns.full": "Wiederholugnszeichen.detail",
     "repeatstart": "Wiederholungsanfang",
     "Replace all unisons in the selection by the first note": "Ersetze Mehrklänge durch deren erste Noten",
+    "Replace all unisons in the selection by the inner part note": "**--Mehrklänge durch deren innere Noten ersetzen",
     "Replace all unisons in the selection by the last note": "Ersetze Mehrklänge durch deren letzte note",
+    "Replace all unisons in the selection by the second last note": "Mehrklänge durch deren vorletzte Note ersetzen",
+    "Replace all unisons in the selection by the second note": "Mehrklägne durch deren zweite Note ersetzen",
     "Replace unison by first note": "Mehrklang zu erster Note",
+    "Replace unison by inner part": "Mehrklang durch innere Noten ersetzen",
     "Replace unison by last note": "Mehrklang zu letzter Note",
+    "Replace unison by second last note": "Mehrklang durch letzte Note ersetzen",
+    "Replace unison by second note": "Mehrklang duch zweite Note erseetzen",
     "reset template to Zupfnoter defalts": "Vorlage auf Zupfnoter-Voreinstellung zurücksetzen",
     "resettemplate": "Vorlage zurücksetzen",
     "resources": "Resourcen",
@@ -406,6 +420,8 @@
     "REST_TO_GLYPH": "Pausensymbole",
     "restposition": "Position der Pausen",
     "rests as V 1.3": "Pausen wie in V. 1.3",
+    "Revert notes": "Mehrklänge umkehren",
+    "revert unisons": "Reihenfolge der Noten in Mehrklängen umkehren",
     "right": "rechts",
     "saitenspiel": "Saitenspiel",
     "Save ABC file in dropbox": "ABC-File in Dropbox speichern",
@@ -498,6 +514,7 @@
     "Toggle console": "Konsole ein/ausschalten",
     "trpos": "oben rechts",
     "Tune": "Noten",
+    "tuning": "Stimmung",
     "tuplet": "n-Tole",
     "tuplets": "n-Tolen",
     "undo": "rückgängig",
@@ -539,7 +556,6 @@
     "Zombie token or zombie login occured. Maybe you hit the back button in the browser.": "Zombie Zugriffstoken oder login aufgetreten. Bitte drücke nicht die ZURÜCK-Taste des Borwsers nach dem Einloggen in Dropbox.",
     "zoom harpnote preview": "Zoom in Vorschau der Harfennoten",
     "Zupfnoter": "Zupfnoter",
-
 
 
 
