see #294 now we can add style to title
also recompiled

--- a/30_sources/SRC_Zupfnoter/public/locale/de-de.json
+++ b/30_sources/SRC_Zupfnoter/public/locale/de-de.json
@@ -619,6 +619,7 @@
     "Title": "Titel",
     "Toggle console": "Konsole ein/ausschalten",
     "trpos": "oben rechts",
+    "tstyle": "Stil f. Titel",
     "Tune": "Noten",
     "tuning": "Stimmung",
     "tuplet": "n-Tole",
