--- a/30_sources/SRC_Zupfnoter/src/localization/zupfnoter_de-de.json
+++ b/30_sources/SRC_Zupfnoter/src/localization/zupfnoter_de-de.json
@@ -514,6 +514,7 @@
     "Title": "Titel",
     "Toggle console": "Konsole ein/ausschalten",
     "trpos": "oben rechts",
+    "tstyle": "Stil f. Titel",
     "Tune": "Noten",
     "tuning": "Stimmung",
     "tuplet": "n-Tole",
