added abc2svg v. 1.20.7-0f20d2039c

--- a/30_sources/SRC_Zupfnoter/src/localization/abc2svg_de-de.json
+++ b/30_sources/SRC_Zupfnoter/src/localization/abc2svg_de-de.json
@@ -17,7 +17,7 @@
 	"+: symbol line without music": "+: Symbolzeile ohne Musik",
     "+: without previous info field": "+: ohne vorhergehends Info-Feld",
     "'{' in grace note": "'{' in Verzierungsnote",
-    "'}', ')' or ']' missing in %%staves": "'}', ')' oder ']' fehlt in  %%staves",
+    "'}', ')' or ']' missing in %%score": "'}', ')' oder ']' fehlt in  %%score",
     "',' lacking in annotation '@x,y'": "',' fehlt in Beschriftung  '@x,y'",
 	"'$1' is not a note": "'$1' is keine Note",
     "'$1:' line ignored": "'$1:' Zeile ignoreirt",
@@ -34,11 +34,9 @@
     "%%multicol end without start": "%%multicol end ohne start",
     "%%multicol new without start": "%%multicol new ohne stand",
     "%%repeat cannot start a tune": "%%repeat kann nicht am Anfang einer Stimme stehen",
-    "%%select ignored": "%%select ignoriert",
     "%%staffwidth too big": "%%staffwidth zu groß",
     "%%staffwidth too small": "%%staffwidth zu klein",
     "%%tune not treated yet": "%%tune noch nicht behandelt",
-    "%%voice ignored": "%%voice ignoriert",
     "%%vskip cannot be negative": "%%vskip kann nicht negativ sein",
     "Bad !xstem!": "!xstem! fehlerhaft",
     "Bad %%setbarnb value": "fehlerhaft Wert für %%setbarnb",
@@ -48,6 +46,8 @@
     "Bad %%staffscale value": "fehlerhafter Wert für %%staffscale",
     "Bad char '$1' in M:": "fehlerhaftes Zeichen '$1' in M:",
     "Bad character '$1'": "fehlerhaftes Zeichen '$1'",
+	"Bad character in grace note sequence":
+				"fehlerhaftes Zeichen in Sequenz von Vorschlagnoten",
 	"Bad controller number in %%MIDI": "Bad controller number in %%MIDI",
 	"Bad controller value in %%MIDI": "Bad controller value in %%MIDI",
     "Bad duration '$1' in M:": "fehlerhafte Dauer '$1' in M:",
@@ -58,15 +58,16 @@
     "Bad page width": "fehlerhafte Seitenbreite",
 	"Bad program in %%MIDI": "falsches Program in %%MIDI",
     "Bad scale value in %%font": "fehlerhafter Wert für scale in %%font",
+	"Bad tempo value": "Bad tempo value",
     "Bad tie": "fehlerhafter Haltebogen",
     "Bad transpose value": "fehlerhafter Wert für transpose",
     "Bad user character '$1'": "falsches benutzerdefiniertes Zeichen '$1' in U:/%%user",
     "Bad value '$1' in %%linebreak - ignored": "fehlerhafter Wert '$1' in %%linebreak - ignoriert",
     "Bad value in $1": "fehlerhafter Wert in $1",
-    "Bad voice ID in %%staves": "Fehlerhafte ID für Stimme in %%staves",
+    "Bad voice ID in %%score": "Fehlerhafte ID für Stimme in %%score",
     "Bar in repeat sequence": "Taktstrich in Wiederholungssequenz",
     "Cannot have !$1! on a head": "!$1! im Kopfbereich nicht erlaubt",
-    "Cannot have %%fullsvg inside a tune": "'%%fullsvg' innerhalb einer Stimme nicht erlaubt",
+    "Cannot have '$1' inside a tune": "'$1' innerhalb einer Stimme nicht erlaubt",
     "Cannot have a bar in grace notes": "Taktstrich in Vorschlagnote nicht erlaubt",
 	  "Cannot have a broken rhythm in grace notes": "gebrochener Rythmus in Ziernoten nicht erlaubt ",
     "Cannot have V:* in tune body": "V:* im Notenbereich nicht erlaubt",
@@ -74,18 +75,19 @@
     "Decoration ignored": "Dekoration ignoriert",
     "Empty line in tune header - ignored": "Leerzeile in Kopfbereich - ignoriert",
     "Erroneous end of voice overlay": "Fehlerhaftes Ende einer Stimme in überlagerten Stimmen",
+	"Error loading the module $1": "Error loading the module $1",
     "Incorrect 1st value in %%repeat": "erster Wert fehlerhaft in %%repeat",
     "Incorrect 2nd value in %%repeat": "zweiter Wert fehlerhaft in %%repeat",
     "Invalid 'r' in tuplet": "'r' fehlerhaft in Tuplet",
     "Invalid decoration '$1'": "fehlerhafte Dekoration '$1'",
     "Invalid note duration $1": "Fehlerhafte Notendekoration '$1'",
     "Lack of ']'": "']' fehlt",
-    "Lack of ending $1 in U:/%%user": "Ende von $1 fehlt in  U:/%%user",
-    "Lack of starting ! or \" in U: / %%user": "! or \" fehlt in U: / %%user",
+	"Lack of starting [, ! or \" in U: / %%user":
+				"[, ! or \" fehlt in U: / %%user",
     "Line split problem - adjust maxshrink and/or breaklimit": "Probleme beim Aufteilen der Zeile - justiere maxshrink und/oder breaklimit",
     "Line too much shrunk $1 $2 $3": "Zeile zu stark geschrumpft $1 $2 $3",
     "Line underfull ($1pt of $2pt)": "Zeile nicht voll genug ($1pt of $2pt)",
-    "Misplaced '$1' in %%staves": "'$1' fehlerhaft platziert in %%staves",
+    "Misplaced '$1' in %%score": "'$1' fehlerhaft platziert in %%score",
     "Misplaced dot": "fehlerhaft platzierter Punkt",
 	"Mix of old and new transposition syntaxes":
 				"Mix von alter und neuer Transponierungs-syntax",
@@ -105,9 +107,9 @@
     "No note before '-'": "keine Note vor '-'",
     "No note before '<'": "keine Note vor '<'",
     "No note in voice overlay": "keine Note in Stimmüberlagerung",
+//	"Non standard note duration $1": "??",
     "No read_file support": "Einlesen von Files nicht unterstützt",
     "No start of !$1!": "kein Start von  !$1!",
-    "Not a note in grace note sequence":  "Keine Note in Sequenz von Vorschlagnoten",
     "Not an ASCII character": "kein ASCII - Zeichen",
     "Not enough measure bars for lyric line": "nicht genug Takte für Liedtextzeile",
 	"Not enough measure bars for symbol line":
